src/programming_languages/ps6/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> js
Rule 1     js -> element js
Rule 2     js -> <empty>
Rule 3     element -> FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
Rule 4     element -> sstmt
Rule 5     optparams -> params
Rule 6     optparams -> <empty>
Rule 7     params -> IDENTIFIER COMMA params
Rule 8     params -> IDENTIFIER
Rule 9     compoundstmt -> LBRACE stmts RBRACE
Rule 10    stmts -> sstmt stmts
Rule 11    stmt_or_compound -> sstmt
Rule 12    stmt_or_compound -> compoundstmt
Rule 13    optsemi -> <empty>
Rule 14    optsemi -> SEMICOLON
Rule 15    stmts -> <empty>
Rule 16    sstmt -> IF exp stmt_or_compound optsemi
Rule 17    sstmt -> WHILE exp compoundstmt optsemi
Rule 18    sstmt -> IF exp compoundstmt ELSE stmt_or_compound optsemi
Rule 19    sstmt -> IDENTIFIER EQUAL exp SEMICOLON
Rule 20    sstmt -> RETURN exp SEMICOLON
Rule 21    sstmt -> VAR IDENTIFIER EQUAL exp SEMICOLON
Rule 22    sstmt -> exp SEMICOLON
Rule 23    exp -> IDENTIFIER
Rule 24    exp -> LPAREN exp RPAREN
Rule 25    exp -> NUMBER
Rule 26    exp -> STRING
Rule 27    exp -> TRUE
Rule 28    exp -> FALSE
Rule 29    exp -> NOT exp
Rule 30    exp -> FUNCTION LPAREN optparams RPAREN compoundstmt
Rule 31    exp -> exp PLUS exp
Rule 32    exp -> exp MINUS exp
Rule 33    exp -> exp TIMES exp
Rule 34    exp -> exp MOD exp
Rule 35    exp -> exp DIVIDE exp
Rule 36    exp -> exp EQUALEQUAL exp
Rule 37    exp -> exp LE exp
Rule 38    exp -> exp LT exp
Rule 39    exp -> exp GE exp
Rule 40    exp -> exp GT exp
Rule 41    exp -> exp ANDAND exp
Rule 42    exp -> exp OROR exp
Rule 43    exp -> IDENTIFIER LPAREN optargs RPAREN
Rule 44    optargs -> args
Rule 45    optargs -> <empty>
Rule 46    args -> exp COMMA args
Rule 47    args -> exp

Terminals, with rules where they appear

ANDAND               : 41
COMMA                : 7 46
DIVIDE               : 35
ELSE                 : 18
EQUAL                : 19 21
EQUALEQUAL           : 36
FALSE                : 28
FUNCTION             : 3 30
GE                   : 39
GT                   : 40
IDENTIFIER           : 3 7 8 19 21 23 43
IF                   : 16 18
LBRACE               : 9
LE                   : 37
LPAREN               : 3 24 30 43
LT                   : 38
MINUS                : 32
MOD                  : 34
NOT                  : 29
NUMBER               : 25
OROR                 : 42
PLUS                 : 31
RBRACE               : 9
RETURN               : 20
RPAREN               : 3 24 30 43
SEMICOLON            : 14 19 20 21 22
STRING               : 26
TIMES                : 33
TRUE                 : 27
VAR                  : 21
WHILE                : 17
error                : 

Nonterminals, with rules where they appear

args                 : 44 46
compoundstmt         : 3 12 17 18 30
element              : 1
exp                  : 16 17 18 19 20 21 22 24 29 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 46 47
js                   : 1 0
optargs              : 43
optparams            : 3 30
optsemi              : 16 17 18
params               : 5 7
sstmt                : 4 10 11
stmt_or_compound     : 16 18
stmts                : 9 10

Parsing method: LALR

state 0

    (0) S' -> . js
    (1) js -> . element js
    (2) js -> .
    (3) element -> . FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (4) element -> . sstmt
    (16) sstmt -> . IF exp stmt_or_compound optsemi
    (17) sstmt -> . WHILE exp compoundstmt optsemi
    (18) sstmt -> . IF exp compoundstmt ELSE stmt_or_compound optsemi
    (19) sstmt -> . IDENTIFIER EQUAL exp SEMICOLON
    (20) sstmt -> . RETURN exp SEMICOLON
    (21) sstmt -> . VAR IDENTIFIER EQUAL exp SEMICOLON
    (22) sstmt -> . exp SEMICOLON
    (23) exp -> . IDENTIFIER
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . NUMBER
    (26) exp -> . STRING
    (27) exp -> . TRUE
    (28) exp -> . FALSE
    (29) exp -> . NOT exp
    (30) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (31) exp -> . exp PLUS exp
    (32) exp -> . exp MINUS exp
    (33) exp -> . exp TIMES exp
    (34) exp -> . exp MOD exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . exp EQUALEQUAL exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp GE exp
    (40) exp -> . exp GT exp
    (41) exp -> . exp ANDAND exp
    (42) exp -> . exp OROR exp
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN

    $end            reduce using rule 2 (js -> .)
    FUNCTION        shift and go to state 6
    IF              shift and go to state 12
    WHILE           shift and go to state 2
    IDENTIFIER      shift and go to state 5
    RETURN          shift and go to state 1
    VAR             shift and go to state 11
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 8
    STRING          shift and go to state 7
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    NOT             shift and go to state 16

    sstmt                          shift and go to state 4
    element                        shift and go to state 14
    exp                            shift and go to state 15
    js                             shift and go to state 9

state 1

    (20) sstmt -> RETURN . exp SEMICOLON
    (23) exp -> . IDENTIFIER
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . NUMBER
    (26) exp -> . STRING
    (27) exp -> . TRUE
    (28) exp -> . FALSE
    (29) exp -> . NOT exp
    (30) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (31) exp -> . exp PLUS exp
    (32) exp -> . exp MINUS exp
    (33) exp -> . exp TIMES exp
    (34) exp -> . exp MOD exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . exp EQUALEQUAL exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp GE exp
    (40) exp -> . exp GT exp
    (41) exp -> . exp ANDAND exp
    (42) exp -> . exp OROR exp
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 17
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 8
    STRING          shift and go to state 7
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    NOT             shift and go to state 16
    FUNCTION        shift and go to state 18

    exp                            shift and go to state 19

state 2

    (17) sstmt -> WHILE . exp compoundstmt optsemi
    (23) exp -> . IDENTIFIER
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . NUMBER
    (26) exp -> . STRING
    (27) exp -> . TRUE
    (28) exp -> . FALSE
    (29) exp -> . NOT exp
    (30) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (31) exp -> . exp PLUS exp
    (32) exp -> . exp MINUS exp
    (33) exp -> . exp TIMES exp
    (34) exp -> . exp MOD exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . exp EQUALEQUAL exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp GE exp
    (40) exp -> . exp GT exp
    (41) exp -> . exp ANDAND exp
    (42) exp -> . exp OROR exp
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 17
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 8
    STRING          shift and go to state 7
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    NOT             shift and go to state 16
    FUNCTION        shift and go to state 18

    exp                            shift and go to state 20

state 3

    (27) exp -> TRUE .

    SEMICOLON       reduce using rule 27 (exp -> TRUE .)
    PLUS            reduce using rule 27 (exp -> TRUE .)
    MINUS           reduce using rule 27 (exp -> TRUE .)
    TIMES           reduce using rule 27 (exp -> TRUE .)
    MOD             reduce using rule 27 (exp -> TRUE .)
    DIVIDE          reduce using rule 27 (exp -> TRUE .)
    EQUALEQUAL      reduce using rule 27 (exp -> TRUE .)
    LE              reduce using rule 27 (exp -> TRUE .)
    LT              reduce using rule 27 (exp -> TRUE .)
    GE              reduce using rule 27 (exp -> TRUE .)
    GT              reduce using rule 27 (exp -> TRUE .)
    ANDAND          reduce using rule 27 (exp -> TRUE .)
    OROR            reduce using rule 27 (exp -> TRUE .)
    LBRACE          reduce using rule 27 (exp -> TRUE .)
    RPAREN          reduce using rule 27 (exp -> TRUE .)
    IF              reduce using rule 27 (exp -> TRUE .)
    WHILE           reduce using rule 27 (exp -> TRUE .)
    IDENTIFIER      reduce using rule 27 (exp -> TRUE .)
    RETURN          reduce using rule 27 (exp -> TRUE .)
    VAR             reduce using rule 27 (exp -> TRUE .)
    LPAREN          reduce using rule 27 (exp -> TRUE .)
    NUMBER          reduce using rule 27 (exp -> TRUE .)
    STRING          reduce using rule 27 (exp -> TRUE .)
    TRUE            reduce using rule 27 (exp -> TRUE .)
    FALSE           reduce using rule 27 (exp -> TRUE .)
    NOT             reduce using rule 27 (exp -> TRUE .)
    FUNCTION        reduce using rule 27 (exp -> TRUE .)
    COMMA           reduce using rule 27 (exp -> TRUE .)


state 4

    (4) element -> sstmt .

    FUNCTION        reduce using rule 4 (element -> sstmt .)
    IF              reduce using rule 4 (element -> sstmt .)
    WHILE           reduce using rule 4 (element -> sstmt .)
    IDENTIFIER      reduce using rule 4 (element -> sstmt .)
    RETURN          reduce using rule 4 (element -> sstmt .)
    VAR             reduce using rule 4 (element -> sstmt .)
    LPAREN          reduce using rule 4 (element -> sstmt .)
    NUMBER          reduce using rule 4 (element -> sstmt .)
    STRING          reduce using rule 4 (element -> sstmt .)
    TRUE            reduce using rule 4 (element -> sstmt .)
    FALSE           reduce using rule 4 (element -> sstmt .)
    NOT             reduce using rule 4 (element -> sstmt .)
    $end            reduce using rule 4 (element -> sstmt .)


state 5

    (19) sstmt -> IDENTIFIER . EQUAL exp SEMICOLON
    (23) exp -> IDENTIFIER .
    (43) exp -> IDENTIFIER . LPAREN optargs RPAREN

    EQUAL           shift and go to state 21
    SEMICOLON       reduce using rule 23 (exp -> IDENTIFIER .)
    PLUS            reduce using rule 23 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 23 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 23 (exp -> IDENTIFIER .)
    MOD             reduce using rule 23 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 23 (exp -> IDENTIFIER .)
    EQUALEQUAL      reduce using rule 23 (exp -> IDENTIFIER .)
    LE              reduce using rule 23 (exp -> IDENTIFIER .)
    LT              reduce using rule 23 (exp -> IDENTIFIER .)
    GE              reduce using rule 23 (exp -> IDENTIFIER .)
    GT              reduce using rule 23 (exp -> IDENTIFIER .)
    ANDAND          reduce using rule 23 (exp -> IDENTIFIER .)
    OROR            reduce using rule 23 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 22


state 6

    (3) element -> FUNCTION . IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (30) exp -> FUNCTION . LPAREN optparams RPAREN compoundstmt

    IDENTIFIER      shift and go to state 24
    LPAREN          shift and go to state 23


state 7

    (26) exp -> STRING .

    SEMICOLON       reduce using rule 26 (exp -> STRING .)
    PLUS            reduce using rule 26 (exp -> STRING .)
    MINUS           reduce using rule 26 (exp -> STRING .)
    TIMES           reduce using rule 26 (exp -> STRING .)
    MOD             reduce using rule 26 (exp -> STRING .)
    DIVIDE          reduce using rule 26 (exp -> STRING .)
    EQUALEQUAL      reduce using rule 26 (exp -> STRING .)
    LE              reduce using rule 26 (exp -> STRING .)
    LT              reduce using rule 26 (exp -> STRING .)
    GE              reduce using rule 26 (exp -> STRING .)
    GT              reduce using rule 26 (exp -> STRING .)
    ANDAND          reduce using rule 26 (exp -> STRING .)
    OROR            reduce using rule 26 (exp -> STRING .)
    LBRACE          reduce using rule 26 (exp -> STRING .)
    RPAREN          reduce using rule 26 (exp -> STRING .)
    IF              reduce using rule 26 (exp -> STRING .)
    WHILE           reduce using rule 26 (exp -> STRING .)
    IDENTIFIER      reduce using rule 26 (exp -> STRING .)
    RETURN          reduce using rule 26 (exp -> STRING .)
    VAR             reduce using rule 26 (exp -> STRING .)
    LPAREN          reduce using rule 26 (exp -> STRING .)
    NUMBER          reduce using rule 26 (exp -> STRING .)
    STRING          reduce using rule 26 (exp -> STRING .)
    TRUE            reduce using rule 26 (exp -> STRING .)
    FALSE           reduce using rule 26 (exp -> STRING .)
    NOT             reduce using rule 26 (exp -> STRING .)
    FUNCTION        reduce using rule 26 (exp -> STRING .)
    COMMA           reduce using rule 26 (exp -> STRING .)


state 8

    (25) exp -> NUMBER .

    SEMICOLON       reduce using rule 25 (exp -> NUMBER .)
    PLUS            reduce using rule 25 (exp -> NUMBER .)
    MINUS           reduce using rule 25 (exp -> NUMBER .)
    TIMES           reduce using rule 25 (exp -> NUMBER .)
    MOD             reduce using rule 25 (exp -> NUMBER .)
    DIVIDE          reduce using rule 25 (exp -> NUMBER .)
    EQUALEQUAL      reduce using rule 25 (exp -> NUMBER .)
    LE              reduce using rule 25 (exp -> NUMBER .)
    LT              reduce using rule 25 (exp -> NUMBER .)
    GE              reduce using rule 25 (exp -> NUMBER .)
    GT              reduce using rule 25 (exp -> NUMBER .)
    ANDAND          reduce using rule 25 (exp -> NUMBER .)
    OROR            reduce using rule 25 (exp -> NUMBER .)
    LBRACE          reduce using rule 25 (exp -> NUMBER .)
    RPAREN          reduce using rule 25 (exp -> NUMBER .)
    IF              reduce using rule 25 (exp -> NUMBER .)
    WHILE           reduce using rule 25 (exp -> NUMBER .)
    IDENTIFIER      reduce using rule 25 (exp -> NUMBER .)
    RETURN          reduce using rule 25 (exp -> NUMBER .)
    VAR             reduce using rule 25 (exp -> NUMBER .)
    LPAREN          reduce using rule 25 (exp -> NUMBER .)
    NUMBER          reduce using rule 25 (exp -> NUMBER .)
    STRING          reduce using rule 25 (exp -> NUMBER .)
    TRUE            reduce using rule 25 (exp -> NUMBER .)
    FALSE           reduce using rule 25 (exp -> NUMBER .)
    NOT             reduce using rule 25 (exp -> NUMBER .)
    FUNCTION        reduce using rule 25 (exp -> NUMBER .)
    COMMA           reduce using rule 25 (exp -> NUMBER .)


state 9

    (0) S' -> js .



state 10

    (24) exp -> LPAREN . exp RPAREN
    (23) exp -> . IDENTIFIER
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . NUMBER
    (26) exp -> . STRING
    (27) exp -> . TRUE
    (28) exp -> . FALSE
    (29) exp -> . NOT exp
    (30) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (31) exp -> . exp PLUS exp
    (32) exp -> . exp MINUS exp
    (33) exp -> . exp TIMES exp
    (34) exp -> . exp MOD exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . exp EQUALEQUAL exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp GE exp
    (40) exp -> . exp GT exp
    (41) exp -> . exp ANDAND exp
    (42) exp -> . exp OROR exp
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 17
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 8
    STRING          shift and go to state 7
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    NOT             shift and go to state 16
    FUNCTION        shift and go to state 18

    exp                            shift and go to state 25

state 11

    (21) sstmt -> VAR . IDENTIFIER EQUAL exp SEMICOLON

    IDENTIFIER      shift and go to state 26


state 12

    (16) sstmt -> IF . exp stmt_or_compound optsemi
    (18) sstmt -> IF . exp compoundstmt ELSE stmt_or_compound optsemi
    (23) exp -> . IDENTIFIER
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . NUMBER
    (26) exp -> . STRING
    (27) exp -> . TRUE
    (28) exp -> . FALSE
    (29) exp -> . NOT exp
    (30) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (31) exp -> . exp PLUS exp
    (32) exp -> . exp MINUS exp
    (33) exp -> . exp TIMES exp
    (34) exp -> . exp MOD exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . exp EQUALEQUAL exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp GE exp
    (40) exp -> . exp GT exp
    (41) exp -> . exp ANDAND exp
    (42) exp -> . exp OROR exp
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 17
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 8
    STRING          shift and go to state 7
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    NOT             shift and go to state 16
    FUNCTION        shift and go to state 18

    exp                            shift and go to state 27

state 13

    (28) exp -> FALSE .

    SEMICOLON       reduce using rule 28 (exp -> FALSE .)
    PLUS            reduce using rule 28 (exp -> FALSE .)
    MINUS           reduce using rule 28 (exp -> FALSE .)
    TIMES           reduce using rule 28 (exp -> FALSE .)
    MOD             reduce using rule 28 (exp -> FALSE .)
    DIVIDE          reduce using rule 28 (exp -> FALSE .)
    EQUALEQUAL      reduce using rule 28 (exp -> FALSE .)
    LE              reduce using rule 28 (exp -> FALSE .)
    LT              reduce using rule 28 (exp -> FALSE .)
    GE              reduce using rule 28 (exp -> FALSE .)
    GT              reduce using rule 28 (exp -> FALSE .)
    ANDAND          reduce using rule 28 (exp -> FALSE .)
    OROR            reduce using rule 28 (exp -> FALSE .)
    LBRACE          reduce using rule 28 (exp -> FALSE .)
    RPAREN          reduce using rule 28 (exp -> FALSE .)
    IF              reduce using rule 28 (exp -> FALSE .)
    WHILE           reduce using rule 28 (exp -> FALSE .)
    IDENTIFIER      reduce using rule 28 (exp -> FALSE .)
    RETURN          reduce using rule 28 (exp -> FALSE .)
    VAR             reduce using rule 28 (exp -> FALSE .)
    LPAREN          reduce using rule 28 (exp -> FALSE .)
    NUMBER          reduce using rule 28 (exp -> FALSE .)
    STRING          reduce using rule 28 (exp -> FALSE .)
    TRUE            reduce using rule 28 (exp -> FALSE .)
    FALSE           reduce using rule 28 (exp -> FALSE .)
    NOT             reduce using rule 28 (exp -> FALSE .)
    FUNCTION        reduce using rule 28 (exp -> FALSE .)
    COMMA           reduce using rule 28 (exp -> FALSE .)


state 14

    (1) js -> element . js
    (1) js -> . element js
    (2) js -> .
    (3) element -> . FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (4) element -> . sstmt
    (16) sstmt -> . IF exp stmt_or_compound optsemi
    (17) sstmt -> . WHILE exp compoundstmt optsemi
    (18) sstmt -> . IF exp compoundstmt ELSE stmt_or_compound optsemi
    (19) sstmt -> . IDENTIFIER EQUAL exp SEMICOLON
    (20) sstmt -> . RETURN exp SEMICOLON
    (21) sstmt -> . VAR IDENTIFIER EQUAL exp SEMICOLON
    (22) sstmt -> . exp SEMICOLON
    (23) exp -> . IDENTIFIER
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . NUMBER
    (26) exp -> . STRING
    (27) exp -> . TRUE
    (28) exp -> . FALSE
    (29) exp -> . NOT exp
    (30) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (31) exp -> . exp PLUS exp
    (32) exp -> . exp MINUS exp
    (33) exp -> . exp TIMES exp
    (34) exp -> . exp MOD exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . exp EQUALEQUAL exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp GE exp
    (40) exp -> . exp GT exp
    (41) exp -> . exp ANDAND exp
    (42) exp -> . exp OROR exp
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN

    $end            reduce using rule 2 (js -> .)
    FUNCTION        shift and go to state 6
    IF              shift and go to state 12
    WHILE           shift and go to state 2
    IDENTIFIER      shift and go to state 5
    RETURN          shift and go to state 1
    VAR             shift and go to state 11
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 8
    STRING          shift and go to state 7
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    NOT             shift and go to state 16

    sstmt                          shift and go to state 4
    js                             shift and go to state 28
    exp                            shift and go to state 15
    element                        shift and go to state 14

state 15

    (22) sstmt -> exp . SEMICOLON
    (31) exp -> exp . PLUS exp
    (32) exp -> exp . MINUS exp
    (33) exp -> exp . TIMES exp
    (34) exp -> exp . MOD exp
    (35) exp -> exp . DIVIDE exp
    (36) exp -> exp . EQUALEQUAL exp
    (37) exp -> exp . LE exp
    (38) exp -> exp . LT exp
    (39) exp -> exp . GE exp
    (40) exp -> exp . GT exp
    (41) exp -> exp . ANDAND exp
    (42) exp -> exp . OROR exp

    SEMICOLON       shift and go to state 33
    PLUS            shift and go to state 38
    MINUS           shift and go to state 40
    TIMES           shift and go to state 35
    MOD             shift and go to state 41
    DIVIDE          shift and go to state 32
    EQUALEQUAL      shift and go to state 39
    LE              shift and go to state 31
    LT              shift and go to state 36
    GE              shift and go to state 34
    GT              shift and go to state 37
    ANDAND          shift and go to state 29
    OROR            shift and go to state 30


state 16

    (29) exp -> NOT . exp
    (23) exp -> . IDENTIFIER
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . NUMBER
    (26) exp -> . STRING
    (27) exp -> . TRUE
    (28) exp -> . FALSE
    (29) exp -> . NOT exp
    (30) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (31) exp -> . exp PLUS exp
    (32) exp -> . exp MINUS exp
    (33) exp -> . exp TIMES exp
    (34) exp -> . exp MOD exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . exp EQUALEQUAL exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp GE exp
    (40) exp -> . exp GT exp
    (41) exp -> . exp ANDAND exp
    (42) exp -> . exp OROR exp
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 17
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 8
    STRING          shift and go to state 7
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    NOT             shift and go to state 16
    FUNCTION        shift and go to state 18

    exp                            shift and go to state 42

state 17

    (23) exp -> IDENTIFIER .
    (43) exp -> IDENTIFIER . LPAREN optargs RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    SEMICOLON       reduce using rule 23 (exp -> IDENTIFIER .)
    PLUS            reduce using rule 23 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 23 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 23 (exp -> IDENTIFIER .)
    MOD             reduce using rule 23 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 23 (exp -> IDENTIFIER .)
    EQUALEQUAL      reduce using rule 23 (exp -> IDENTIFIER .)
    LE              reduce using rule 23 (exp -> IDENTIFIER .)
    LT              reduce using rule 23 (exp -> IDENTIFIER .)
    GE              reduce using rule 23 (exp -> IDENTIFIER .)
    GT              reduce using rule 23 (exp -> IDENTIFIER .)
    ANDAND          reduce using rule 23 (exp -> IDENTIFIER .)
    OROR            reduce using rule 23 (exp -> IDENTIFIER .)
    LBRACE          reduce using rule 23 (exp -> IDENTIFIER .)
    RPAREN          reduce using rule 23 (exp -> IDENTIFIER .)
    IF              reduce using rule 23 (exp -> IDENTIFIER .)
    WHILE           reduce using rule 23 (exp -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 23 (exp -> IDENTIFIER .)
    RETURN          reduce using rule 23 (exp -> IDENTIFIER .)
    VAR             reduce using rule 23 (exp -> IDENTIFIER .)
    NUMBER          reduce using rule 23 (exp -> IDENTIFIER .)
    STRING          reduce using rule 23 (exp -> IDENTIFIER .)
    TRUE            reduce using rule 23 (exp -> IDENTIFIER .)
    FALSE           reduce using rule 23 (exp -> IDENTIFIER .)
    NOT             reduce using rule 23 (exp -> IDENTIFIER .)
    FUNCTION        reduce using rule 23 (exp -> IDENTIFIER .)
    COMMA           reduce using rule 23 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 22

  ! LPAREN          [ reduce using rule 23 (exp -> IDENTIFIER .) ]


state 18

    (30) exp -> FUNCTION . LPAREN optparams RPAREN compoundstmt

    LPAREN          shift and go to state 23


state 19

    (20) sstmt -> RETURN exp . SEMICOLON
    (31) exp -> exp . PLUS exp
    (32) exp -> exp . MINUS exp
    (33) exp -> exp . TIMES exp
    (34) exp -> exp . MOD exp
    (35) exp -> exp . DIVIDE exp
    (36) exp -> exp . EQUALEQUAL exp
    (37) exp -> exp . LE exp
    (38) exp -> exp . LT exp
    (39) exp -> exp . GE exp
    (40) exp -> exp . GT exp
    (41) exp -> exp . ANDAND exp
    (42) exp -> exp . OROR exp

    SEMICOLON       shift and go to state 43
    PLUS            shift and go to state 38
    MINUS           shift and go to state 40
    TIMES           shift and go to state 35
    MOD             shift and go to state 41
    DIVIDE          shift and go to state 32
    EQUALEQUAL      shift and go to state 39
    LE              shift and go to state 31
    LT              shift and go to state 36
    GE              shift and go to state 34
    GT              shift and go to state 37
    ANDAND          shift and go to state 29
    OROR            shift and go to state 30


state 20

    (17) sstmt -> WHILE exp . compoundstmt optsemi
    (31) exp -> exp . PLUS exp
    (32) exp -> exp . MINUS exp
    (33) exp -> exp . TIMES exp
    (34) exp -> exp . MOD exp
    (35) exp -> exp . DIVIDE exp
    (36) exp -> exp . EQUALEQUAL exp
    (37) exp -> exp . LE exp
    (38) exp -> exp . LT exp
    (39) exp -> exp . GE exp
    (40) exp -> exp . GT exp
    (41) exp -> exp . ANDAND exp
    (42) exp -> exp . OROR exp
    (9) compoundstmt -> . LBRACE stmts RBRACE

    PLUS            shift and go to state 38
    MINUS           shift and go to state 40
    TIMES           shift and go to state 35
    MOD             shift and go to state 41
    DIVIDE          shift and go to state 32
    EQUALEQUAL      shift and go to state 39
    LE              shift and go to state 31
    LT              shift and go to state 36
    GE              shift and go to state 34
    GT              shift and go to state 37
    ANDAND          shift and go to state 29
    OROR            shift and go to state 30
    LBRACE          shift and go to state 44

    compoundstmt                   shift and go to state 45

state 21

    (19) sstmt -> IDENTIFIER EQUAL . exp SEMICOLON
    (23) exp -> . IDENTIFIER
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . NUMBER
    (26) exp -> . STRING
    (27) exp -> . TRUE
    (28) exp -> . FALSE
    (29) exp -> . NOT exp
    (30) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (31) exp -> . exp PLUS exp
    (32) exp -> . exp MINUS exp
    (33) exp -> . exp TIMES exp
    (34) exp -> . exp MOD exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . exp EQUALEQUAL exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp GE exp
    (40) exp -> . exp GT exp
    (41) exp -> . exp ANDAND exp
    (42) exp -> . exp OROR exp
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 17
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 8
    STRING          shift and go to state 7
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    NOT             shift and go to state 16
    FUNCTION        shift and go to state 18

    exp                            shift and go to state 46

state 22

    (43) exp -> IDENTIFIER LPAREN . optargs RPAREN
    (44) optargs -> . args
    (45) optargs -> .
    (46) args -> . exp COMMA args
    (47) args -> . exp
    (23) exp -> . IDENTIFIER
    (24) exp -> . LPAREN exp RPAREN
    (25) exp -> . NUMBER
    (26) exp -> . STRING
    (27) exp -> . TRUE
    (28) exp -> . FALSE
    (29) exp -> . NOT exp
    (30) exp -> . FUNCTION LPAREN optparams RPAREN compoundstmt
    (31) exp -> . exp PLUS exp
    (32) exp -> . exp MINUS exp
    (33) exp -> . exp TIMES exp
    (34) exp -> . exp MOD exp
    (35) exp -> . exp DIVIDE exp
    (36) exp -> . exp EQUALEQUAL exp
    (37) exp -> . exp LE exp
    (38) exp -> . exp LT exp
    (39) exp -> . exp GE exp
    (40) exp -> . exp GT exp
    (41) exp -> . exp ANDAND exp
    (42) exp -> . exp OROR exp
    (43) exp -> . IDENTIFIER LPAREN optargs RPAREN

    RPAREN          reduce using rule 45 (optargs -> .)
    IDENTIFIER      shift and go to state 17
    LPAREN          shift and go to state 10
    NUMBER          shift and go to state 8
    STRING          shift and go to state 7
    TRUE            shift and go to state 3
    FALSE           shift and go to state 13
    NOT             shift and go to state 16
    FUNCTION        shift and go to state 18

    args                           shift and go to state 47
    exp                            shift and go to state 49
    optargs                        shift and go to state 48

state 23

    (30) exp -> FUNCTION LPAREN . optparams RPAREN compoundstmt
    (5) optparams -> . params
    (6) optparams -> .
    (7) params -> . IDENTIFIER COMMA params
    (8) params -> . IDENTIFIER

    RPAREN          reduce using rule 6 (optparams -> .)
    IDENTIFIER      shift and go to state 51

    params                         shift and go to state 50
    optparams                      shift and go to state 52

state 24

    (3) element -> FUNCTION IDENTIFIER . LPAREN optparams RPAREN compoundstmt

    LPAREN          shift and go to state 53


state 25
